--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>If trading is more accessible than ever, why do most still fail?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The Truth About Day Trading</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - The Path from Fear to Freedom</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -985,7 +985,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2239,7 +2239,7 @@
                     <div class="video-info">
                         <h3>My Portfolios Made Over $4,700 in Income Last Month</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>If trading is more accessible than ever, why do most still fail?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>The Truth About Day Trading</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5472,7 +5472,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 10</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -6055,7 +6055,7 @@
                         <div class="video-info">
                             <h3>My Portfolios Made Over $4,700 in Income Last Month</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - The Path from Fear to Freedom</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
