--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Williams VixFix Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">5 minutes ago</div>
+                        <div class="date">32 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Liberation - Releasing the Pull of Distraction</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">46 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>If trading is more accessible than ever, why do most still fail?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The Truth About Day Trading</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Are Labour Unlucky (or are they just rubbish)?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>Why aren't more traders profitable?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -453,7 +453,7 @@
                     <div class="video-info">
                         <h3>Trendline analysis of the US Dollar...</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2305,7 +2305,7 @@
                     <div class="video-info">
                         <h3>Refugee Riots – Salience and Storytelling</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 07, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Williams VixFix Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">5 minutes ago</div>
+                            <div class="date">32 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>If trading is more accessible than ever, why do most still fail?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>The Truth About Day Trading</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5160,7 +5160,7 @@
                         <div class="video-info">
                             <h3>Are Labour Unlucky (or are they just rubbish)?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5204,7 +5204,7 @@
                         <div class="video-info">
                             <h3>Why aren't more traders profitable?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5215,7 +5215,7 @@
                         <div class="video-info">
                             <h3>Trendline analysis of the US Dollar...</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -6099,7 +6099,7 @@
                         <div class="video-info">
                             <h3>Refugee Riots – Salience and Storytelling</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 07, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Liberation - Releasing the Pull of Distraction</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">46 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
