--- a/index.html
+++ b/index.html
@@ -963,7 +963,7 @@
                     <div class="video-info">
                         <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1557,7 +1557,7 @@
                     <div class="video-info">
                         <h3>How To Trade Like A Casino</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5450,7 +5450,7 @@
                         <div class="video-info">
                             <h3>Candlestick Pattern Is Not Enough, Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -5736,7 +5736,7 @@
                         <div class="video-info">
                             <h3>How To Trade Like A Casino</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
