--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>How To Separate Success & Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Why Porn Addiction Is A Mental Sickness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1355,9 +1355,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=WQyFh-0tGjU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/WQyFh-0tGjU/mqdefault.jpg" alt="Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)">
+                    <img src="https://i.ytimg.com/vi/WQyFh-0tGjU/mqdefault.jpg" alt="Are You Ready To Awaken? | Eckhart Tolle on the Paradox of Time (Part 2)">
                     <div class="video-info">
-                        <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
+                        <h3>Are You Ready To Awaken? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                         <div class="channel">Eckhart Tolle</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -1546,7 +1546,7 @@
                     <div class="video-info">
                         <h3>Why the Stock Market Is Like a Lottery?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5725,7 +5725,7 @@
                         <div class="video-info">
                             <h3>Why the Stock Market Is Like a Lottery?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>How To Separate Success & Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Why Porn Addiction Is A Mental Sickness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7663,9 +7663,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=WQyFh-0tGjU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/WQyFh-0tGjU/mqdefault.jpg" alt="Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)">
+                        <img src="https://i.ytimg.com/vi/WQyFh-0tGjU/mqdefault.jpg" alt="Are You Ready To Awaken? | Eckhart Tolle on the Paradox of Time (Part 2)">
                         <div class="video-info">
-                            <h3>Are You Ready for Presence? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
+                            <h3>Are You Ready To Awaken? | Eckhart Tolle on the Paradox of Time (Part 2)</h3>
                             <div class="channel">Eckhart Tolle</div>
                             <div class="date">1 week ago</div>
                         </div>
