--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">50 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Who Was the Greatest Warrior in Mahabharat? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">58 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Williams VixFix Strategy</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>How To Separate Success & Life? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -409,7 +409,7 @@
                     <div class="video-info">
                         <h3>The Two Ingredients For Success | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1513,7 +1513,7 @@
                     <div class="video-info">
                         <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Williams VixFix Strategy</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">50 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Who Was the Greatest Warrior in Mahabharat? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">58 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>How To Separate Success & Life? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7381,7 +7381,7 @@
                         <div class="video-info">
                             <h3>The Two Ingredients For Success | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8834,7 +8834,7 @@
                         <div class="video-info">
                             <h3>POV Spaghetti Amatriciana 🍝👨‍🍳 #chef #pasta #pov</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
