--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 minutes ago</div>
+                        <div class="date">18 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Don’t Deny Your Shadow – A Personal Story</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>"Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Liberation - Releasing the Pull of Distraction</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>If trading is more accessible than ever, why do most still fail?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                         <div class="channel">The Transparent Trader</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>If trading is more accessible than ever, why do most still fail?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>Top Breakout Pairs Revealed: Trade Forex Like a Pro with Data-Backed Picks</h3>
                             <div class="channel">The Transparent Trader</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Don’t Deny Your Shadow – A Personal Story</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Suffering and Spiritual Awakening | Eckhart Tolle On The Path To Enlightenment (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Liberation - Releasing the Pull of Distraction</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 minutes ago</div>
+                            <div class="date">18 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>Pizza Tricks 🍕🔥🤌 #pizza #food #cooking #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>"Weight shift kills your distance!" Top Long Drive Coach Exposes the Truth</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
