--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">39 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Who Was the Greatest Warrior in Mahabharat? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1535,7 +1535,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>Who Was the Greatest Warrior in Mahabharat? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">39 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9693,7 +9693,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
