--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1524,7 +1524,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AVOID THE BOMB</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>When Pizza Becomes a Sandwich… Magic Happens 🤌🔥 #shorts #pizza #italy</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9682,7 +9682,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AVOID THE BOMB</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
