--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>How to rescue your pizza stuck on your pizza peel #pizzahotline #pizza #pizzacooking #pizzacooking</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 07, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8988,7 +8988,7 @@
                         <div class="video-info">
                             <h3>How to rescue your pizza stuck on your pizza peel #pizzahotline #pizza #pizzacooking #pizzacooking</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 07, 2025</div>
                         </div>
                     </a>
                 </div>
