--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN WINNER STAYS ON</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">40 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -310,7 +310,7 @@
                     <div class="video-info">
                         <h3>This Was my  Grandma favorite pizza To make</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7282,7 +7282,7 @@
                         <div class="video-info">
                             <h3>Stop Cutting the Roots of Life | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8757,7 +8757,7 @@
                         <div class="video-info">
                             <h3>This Was my  Grandma favorite pizza To make</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN WINNER STAYS ON</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">40 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
